--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8000
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:mysql://localhost:3306/population?allowMultiQueries=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=gaoyong
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
